--- a/src/components/WelcometoObiztec/index.css
+++ b/src/components/WelcometoObiztec/index.css
@@ -1,33 +1,41 @@
-/* Section Features */
-.section-features {
+/* Import the Inter font */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap');
+
+/* Welcome Section */
+.welcome-section {
   width: 100%;
   max-width: 1280px;
   margin: 0 auto;
   padding: 0 1rem;
   margin-top: 104px; /* Start after the Hero section (1024px height) */
+  display: flex;
+  justify-content: center;
 }
 
-/* Features Container */
-.features {
+/* Welcome Features Container */
+.welcome-features {
   width: 100%;
+  max-width: 1280px;
+  /* height: 1039px; */
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-/* Heading Container */
-.heading-container {
-  position: relative; /* Changed to relative to flow naturally within the section */
+/* Welcome Heading Container */
+.welcome-heading-container {
+  width: 443px;
+  height: 57px;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw !important;
   max-width: 1280px;
   margin-bottom: 3rem;
 }
 
-/* Welcome Heading */
-.welcome-heading {
+/* Welcome Title */
+.welcome-title {
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -40,8 +48,8 @@
   margin: 0;
 }
 
-/* Heading Decorative Elements */
-.heading-decore {
+/* Welcome Heading Decorative Elements */
+.welcome-heading-decor {
   position: absolute;
   top: -15px;
   left: -40px;
@@ -50,38 +58,39 @@
   gap: 5px;
 }
 
-.subtract {
+.welcome-decor-shape {
   background: #58F93B;
 }
 
-.subtract-1 {
+.welcome-decor-shape-1 {
   width: 20px;
   height: 20px;
 }
 
-.subtract-2 {
+.welcome-decor-shape-2 {
   width: 10px;
   height: 10px;
 }
 
-/* Features Container (Cards) */
-.features-container {
+/* Welcome Features Container (Cards) */
+/* .welcome-features-container {
   display: flex;
   justify-content: space-between;
   width: 100%;
   max-width: 1280px;
   gap: 2rem;
-}
+  position: relative;
+  top: 106px;
+} */
 
-/* Feature Cards */
-.feature {
+.welcome-feature {
   position: relative;
   width: 411px;
   box-shadow: 0px 12px 24px 1px rgba(18, 50, 12, 0.1);
   border-radius: 999999999px;
 }
 
-.feature-background {
+.welcome-feature-background {
   position: relative;
   width: 100%;
   height: 100%;
@@ -90,7 +99,7 @@
   overflow: hidden;
 }
 
-.ellipse {
+.welcome-ellipse {
   position: absolute;
   width: 411px;
   height: 411px;
@@ -98,13 +107,13 @@
   border-radius: 50%;
 }
 
-.rectangle {
+.welcome-rectangle {
   position: absolute;
   width: 411px;
   background: transparent;
 }
 
-.icon {
+.welcome-icon {
   position: absolute;
   width: 90px;
   height: 90px;
@@ -112,18 +121,18 @@
   transform: translateX(-50%);
 }
 
-.vector {
+.welcome-vector {
   position: absolute;
   background: #58F93B;
 }
 
-.feature-content {
+.welcome-feature-content {
   position: relative;
   padding: 70px 30px;
   text-align: center;
 }
 
-.feature-heading {
+.welcome-feature-heading {
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -134,7 +143,7 @@
   margin-bottom: 1rem;
 }
 
-.feature-text {
+.welcome-feature-text {
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -145,176 +154,188 @@
 }
 
 /* Feature 1: Affordable Solutions */
-.feature-1 {
+.welcome-feature-affordable {
+  position: absolute;
+  left: 518px;
+  top: 1289px;
+  /* height: 518px; */
+  width: 411px;
+}
+
+.welcome-feature-affordable .welcome-feature-background {
   height: 545px;
 }
 
-.feature-1 .feature-background {
-  height: 545px;
-}
-
-.feature-1 .ellipse-1 {
+.welcome-feature-affordable .welcome-ellipse-1 {
   top: 0;
 }
 
-.feature-1 .ellipse-2 {
+.welcome-feature-affordable .welcome-ellipse-2 {
   top: 134px;
 }
 
-.feature-1 .rectangle-3 {
+.welcome-feature-affordable .welcome-rectangle-3 {
   height: 137px;
   top: 214px;
 }
 
-.feature-1 .development-icon {
+.welcome-feature-affordable .welcome-development-icon {
   top: 100px;
 }
 
-.feature-1 .vector-1 {
+.welcome-feature-affordable .welcome-vector-1 {
   left: 4.17%;
   right: 4.17%;
   top: 4.17%;
   bottom: 4.17%;
 }
 
-.feature-1 .vector-2 {
+.welcome-feature-affordable .welcome-vector-2 {
   left: 29.14%;
   right: 54.14%;
   top: 49.98%;
   bottom: 24.98%;
 }
 
-.feature-1 .vector-3 {
+.welcome-feature-affordable .welcome-vector-3 {
   left: 54.14%;
   right: 29.14%;
   top: 49.98%;
   bottom: 24.98%;
 }
 
-.feature-1 .feature-content {
+.welcome-feature-affordable .welcome-feature-content {
   padding-top: 250px;
 }
 
 /* Feature 2: Our Mission */
-.feature-2 {
+.welcome-feature-mission {
+  position: absolute;
+  left: 83px;
+  top: 1393px;
   height: 702px;
+  width: 411px;
 }
 
-.feature-2 .feature-background {
+.welcome-feature-mission .welcome-feature-background {
   height: 702px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.feature-2 .ellipse-1 {
+.welcome-feature-mission .welcome-ellipse-1 {
   top: 0;
 }
 
-.feature-2 .ellipse-2 {
+.welcome-feature-mission .welcome-ellipse-2 {
   top: 291px;
 }
 
-.feature-2 .rectangle-3 {
+.welcome-feature-mission .welcome-rectangle-3 {
   height: 274px;
   top: 214px;
 }
 
-.feature-2 .mission-icon {
+.welcome-feature-mission .welcome-mission-icon {
   top: 100px;
 }
 
-.feature-2 .vector-1 {
+.welcome-feature-mission .welcome-vector-1 {
   left: 28.15%;
   right: 28.12%;
   top: 3.07%;
   bottom: 2.98%;
 }
 
-.feature-2 .vector-2 {
+.welcome-feature-mission .welcome-vector-2 {
   left: 59.29%;
   right: 9.37%;
   top: 9.34%;
   bottom: 53.12%;
 }
 
-.feature-2 .feature-content {
+.welcome-feature-mission .welcome-feature-content {
   padding-top: 250px;
 }
 
 /* Feature 3: Our Goal */
-.feature-3 {
+.welcome-feature-goal {
+  position: absolute;
+  left: 952px;
+  top: 1331px;
+  height: 822px;
+  width: 411px;
+}
+
+.welcome-feature-goal .welcome-feature-background {
   height: 822px;
 }
 
-.feature-3 .feature-background {
-  height: 822px;
-}
-
-.feature-3 .ellipse-1 {
+.welcome-feature-goal .welcome-ellipse-1 {
   top: 0;
 }
 
-.feature-3 .ellipse-2 {
+.welcome-feature-goal .welcome-ellipse-2 {
   top: 411px;
 }
 
-.feature-3 .rectangle-3 {
+.welcome-feature-goal .welcome-rectangle-3 {
   height: 389px;
   top: 214px;
 }
 
-.feature-3 .goal-icon {
+.welcome-feature-goal .welcome-goal-icon {
   top: 162px;
 }
 
-.feature-3 .vector-1 {
+.welcome-feature-goal .welcome-vector-1 {
   left: 3.44%;
   right: 2.29%;
   top: 2.85%;
   bottom: 2.48%;
 }
 
-.feature-3 .vector-2 {
+.welcome-feature-goal .welcome-vector-2 {
   left: 31.05%;
   right: 36.42%;
   top: 37.37%;
   bottom: 30.09%;
 }
 
-.feature-3 .vector-3 {
+.welcome-feature-goal .welcome-vector-3 {
   left: 3.44%;
   right: 8.66%;
   top: 9.62%;
   bottom: 2.48%;
 }
 
-.feature-3 .feature-content {
+.welcome-feature-goal .welcome-feature-content {
   padding-top: 312px;
 }
 
 /* Responsive Design */
 @media (max-width: 1280px) {
-  .section-features {
+  .welcome-section {
     margin-top: 1024px; /* Ensure the section starts after Hero on smaller screens */
   }
 
-  .features-container {
+  .welcome-features-container {
     flex-direction: row;
     justify-content: center;
     gap: 1rem;
   }
 
-  .feature {
+  .welcome-feature {
     width: 33%;
     min-width: 300px;
   }
 
-  .feature-content {
+  .welcome-feature-content {
     padding: 1rem;
   }
 
-  .feature-1 .feature-content,
-  .feature-2 .feature-content,
-  .feature-3 .feature-content {
+  .welcome-feature-affordable .welcome-feature-content,
+  .welcome-feature-mission .welcome-feature-content,
+  .welcome-feature-goal .welcome-feature-content {
     padding-top: 200px;
   }
 }
