--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,22 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
-}
-
+/* Reset default styles */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-html,
-body {
-    width: 100vh;
-    height: 100%;
-    font-family: 'Inter', sans-serif;
+html {
+    width: 1440px;
+    height: 6159px;
 }
 
 body {
-    min-height: 3140px;
-    background: #fff ;
+    position: relative;
+    width: 1440px;
+    height: 6159px;
+    margin: 0 auto; /* Center the body */
+    background: #FFFFFF;
+    font-family: 'Inter', sans-serif;
 }
