--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -146,7 +146,7 @@ main {
 
 /* Column 4: Legal & Policies */
 .footer-col-4 {
-  width: 272px;
+  width: 247px;
 }
 
 .footer-col-4 h2 {
@@ -172,6 +172,7 @@ main {
 .icon{
   position: absolute;
   left: 120px;
+  /* bottom: 10px; */
 }
 
 /* Column 5: Contact Info */
