--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -81,6 +81,7 @@ main {
   font-weight: 400;
   line-height: 32px;
   color: #eefeeb;
+  margin-top: 50px;
   margin-bottom: 15px;
 }
 
@@ -90,6 +91,7 @@ main {
   line-height: 24px;
   letter-spacing: 0.5px;
   margin-bottom: 10px;
+  margin-top: 26px;
 }
 
 /* Column 2: Quick Links */
@@ -146,7 +148,7 @@ main {
 
 /* Column 4: Legal & Policies */
 .footer-col-4 {
-  width: 247px;
+  width: 277px;
 }
 
 .footer-col-4 h2 {
